--- a/Client/src/assets/css/styles_home.css
+++ b/Client/src/assets/css/styles_home.css
@@ -64,3 +64,12 @@ body {
    padding-right: 12px !important;
    padding-left: 12px !important;
 }
+.row {
+   display: -webkit-box;
+   display: -ms-flexbox;
+   display: flex;
+   -ms-flex-wrap: wrap;
+   flex-wrap: wrap;
+   margin-right: -12px; 
+   margin-left: -12px;
+}
