--- a/Client/src/assets/css/styles_chart.css
+++ b/Client/src/assets/css/styles_chart.css
@@ -1,3 +1,126 @@
-.chart-container{
-    min-height: 50px;
-  }
+/*--------- KW---------*/
+.container-showtable{
+
+}
+.row-border{
+  border-top: 2px solid #f6f6f6;
+  padding-bottom: 12px;
+  padding-top: 12px;
+  margin-right: 0px !important;
+   margin-left: 0px !important;
+   position: relative;
+}
+.row-border .col-6{
+  margin-right: -12px !important;
+  margin-left: -12px !important;
+}
+
+.badge-showtable{
+  width: 3px;
+  height: 3px;
+  background: red; 
+  padding: 4px;
+  border-radius: 10px;
+  position: absolute;
+  margin-top: 9px;
+  
+}
+.text-show-name{
+  font-size: 14px;
+  font-weight: 600;
+  color: #495057;
+  font-family: 'Open Sans', sans-serif;
+  justify-content: center;
+  align-items: center;
+  margin: 0 auto;
+  margin-left: 22px !important;
+}
+
+.text-show-value{
+  text-align: right;
+  font-family: 'Open Sans', sans-serif;
+  font-size: 15px;
+  font-weight: 600;
+  
+}
+/**************Data Table ***********/
+.table-data-contanier nav{
+  background: #fff;
+  margin-top: 10px;
+  box-shadow: 0 4px 6px rgba(52,58,64,.06);
+  border: none;
+}
+.table-data-contanier a{
+  font-size: 12px;
+  font-weight: 700;
+  font-family: 'Open Sans', sans-serif;
+  padding: 8px 10px;
+  color: #495057;
+}
+.nav-tabs .nav-item.show .nav-link, .nav-tabs .nav-link.active {
+  color: #727cf5;
+  background-color: #fff;
+  border-color: #727cf5 #727cf5 #fff;
+  border: 0px solid #727cf5;
+  border-top: 3px solid #727cf5;
+  border-bottom:none;
+}
+
+.nav-tabs .nav-link {
+  border-bottom: 1px solid transparent ;
+  border-top-left-radius: .5rem;
+  border-top-right-radius: .5rem;
+}
+.table-data-container th{
+  border: none !important;
+  font-size: 13px;
+  font-family: 'Open Sans', sans-serif;
+}
+.table-data-container td{
+  border: none;
+  font-size: 14px;
+  font-family: 'Open Sans', sans-serif;
+}
+.table-data-container{
+  overflow-y: scroll;
+  overflow-x: hidden;
+  height: -moz-calc(100vh - 185px);
+  height: -webkit-calc(100vh - 185px);
+  height: calc(100vh - 185px);
+}
+.table-fixed{
+  box-shadow: 0 4px 6px rgba(52,58,64,.06);
+  background: #fff;
+}
+/*
+ *  STYLE 7
+ */
+
+ #style-7::-webkit-scrollbar-track
+ {
+   -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
+   background-color: #F5F5F5;
+   border-radius: 10px;
+ }
+ 
+ #style-7::-webkit-scrollbar
+ {
+   width: 10px;
+   background-color: #F5F5F5;
+ }
+ 
+ #style-7::-webkit-scrollbar-thumb
+ {
+   border-radius: 10px;
+   background-image: -webkit-gradient(linear,
+                      left bottom,
+                      left top,
+                      color-stop(0.44, rgb(122,153,217)),
+                      color-stop(0.72, rgb(122,153,217))
+   )
+                  
+ }
+ .col-control-panel{
+   padding-left: 0 !important;
+   padding-right: 0 !important;
+ }
