--- a/Client/src/assets/css/styles_chart.css
+++ b/Client/src/assets/css/styles_chart.css
@@ -124,3 +124,46 @@
    padding-left: 0 !important;
    padding-right: 0 !important;
  }
+ /*****table-chartFreEne**/
+ .table-chartFreEne{
+   margin-bottom: -10px;
+ }
+ .table-chartFreEne tr{
+   position: relative;
+   background: #fff !important;
+   margin: 0 auto;
+   border-top: 2px solid #f6f6f6;
+ }
+ .table-chartFreEne p{
+    font-size: 14px;
+    font-weight: 600;
+    color: #495057;
+    font-family: 'Open Sans', sans-serif;
+    justify-content: center;
+    align-items: center;
+    margin: 0 auto;
+    margin-left: 22px !important;
+  
+ }
+ .table-chartFreEne-name .badge-chartFreEne{
+    width: 3px;
+    height: 3px;
+    background: rgb(47, 255, 47); 
+    padding: 4px;
+    border-radius: 10px;
+    position: absolute;
+    margin-top: 9px;
+ }
+ .table-chartFreEne-chart{
+
+ }
+ .table-chartFreEne-value{
+    font-family: 'Open Sans', sans-serif;
+    font-size: 16px;
+    font-weight: 600;
+ }
+ .table-chartFreEne-unit{
+    font-family: 'Open Sans', sans-serif;
+    font-size: 14px;
+    font-weight: 600;
+ }
