--- a/Client/src/assets/css/styles_dashboard.css
+++ b/Client/src/assets/css/styles_dashboard.css
@@ -614,6 +614,9 @@
 }
 .background-setting{
   background-color:  transparent !important;
+  webkit-box-shadow: none !important;
+  -moz-box-shadow: none !important;
+  box-shadow: none !important
 }
 .input-setting{
     border: 1px solid #727cf5;
@@ -624,6 +627,7 @@
     width: 100%;
     padding: 10px 15px 10px 20px;
     font-weight: 500;
+    font-family: 'Open Sans', sans-serif;
     webkit-box-shadow: inset 0 1px 2px 0 rgba(206, 209, 224, 0.20) !important;
     -moz-box-shadow: inset 0 1px 2px 0 rgba(206, 209, 224, 0.20) !important;
     box-shadow: inset 0 1px 2px 0 rgba(206, 209, 224, 0.20) !important; 
@@ -637,8 +641,9 @@
   color: #727cf5; 
   margin-top: -2px !important;
   position: absolute;
-  font-size: 18px;
-  font-weight: 600;
+  font-size: 15px;
+  font-weight: 700;
+  font-family: 'Open Sans', sans-serif;
 }
 .form-input-manage{
   padding: 15px 0;
@@ -659,9 +664,9 @@
   margin-bottom: 0px !important;
 }
 .form-lable-manage{
-  font-family: 'Poppins', sans-serif !important;
-  font-weight: 600;
-  font-size: 15px;
+  font-family: 'Open Sans', sans-serif;
+  font-weight: 700;
+  font-size: 14px;
   padding-bottom: 5px;
 }
 .btn-manage{
@@ -721,15 +726,15 @@
   margin-top: 90px;
 }
 .table-manage th{
-  font-size: 15px !important;
+  font-size: 14px !important;
   font-weight: 700 !important;
-  font-family: "Open Sans";
+  font-family: 'Open Sans', sans-serif;
   border-top: none !important;
 }
 .table-manage td{
   font-size: 14px !important;
   font-weight: 500 !important;
-  font-family: "Open Sans";
+  font-family: 'Open Sans', sans-serif;
 }
 .manage-table-tb-delete{
   justify-content: center !important;
