--- a/Client/src/assets/css/styles_chart.css
+++ b/Client/src/assets/css/styles_chart.css
@@ -272,3 +272,6 @@
   top: 100%;
   font-size: 12px;
 }
+.table-hide-pagination .ant-table-pagination.ant-pagination {
+  display: none !important;
+}
