--- a/Client/src/assets/css/styles_chart.css
+++ b/Client/src/assets/css/styles_chart.css
@@ -275,3 +275,6 @@
 .table-hide-pagination .ant-table-pagination.ant-pagination {
   display: none !important;
 }
+.table-hide-pagination .ant-table {
+  font-size: 13px;
+}
