--- a/Client/src/assets/css/styles_formLogin.css
+++ b/Client/src/assets/css/styles_formLogin.css
@@ -306,12 +306,12 @@
 }
 /*----------------------------------*/
 .form-right{
-    background: #f7f8fc;
+    background: #fafafa;
     min-height: 100vh;
     
 }
 .form-right-02{
-    background: #f7f8fc;
+    background: #fafafa;
     height: 100%;
     
 }
