--- a/Client/src/assets/css/styles_chart.css
+++ b/Client/src/assets/css/styles_chart.css
@@ -299,3 +299,14 @@
   text-align: center;
   margin-top: 70px;
 }
+.font-project-header{
+  font-size: 14px !important;
+}
+.table-manage .ant-table-pagination.ant-pagination {
+  display: none !important;
+}
+.table-manage .ant-table {
+  font-size: 14px;
+}
+
+
