--- a/Client/src/assets/css/styles_chart.css
+++ b/Client/src/assets/css/styles_chart.css
@@ -121,23 +121,23 @@
  #style-7::-webkit-scrollbar-track
  {
    -webkit-box-shadow: inset 0 0 4px rgba(235, 235, 235, 0.3);
-   background-color: #F5F5F5;
-   border-radius: 10px;
+   background-color: #caffbf;
+   border-radius: 20px;
  }
  
  #style-7::-webkit-scrollbar
  {
-   width: 7px;
-   background-color: #F5F5F5;
+   width: 5px;
+   background-color: #caffbf;
  }
  
  #style-7::-webkit-scrollbar-thumb
  {
-   border-radius: 10px;
+   border-radius: 20px;
    background-image: -webkit-gradient(linear,
             left bottom,
                       left top,
-                      color-stop(0.44, rgb(122,153,217)),
+                      color-stop(0.44, #caffbf),
                       color-stop(0.72, rgb(122,153,217))
    )
                   
