--- a/Client/src/assets/css/styles_chart.css
+++ b/Client/src/assets/css/styles_chart.css
@@ -121,14 +121,14 @@
  #style-7::-webkit-scrollbar-track
  {
    -webkit-box-shadow: inset 0 0 4px rgba(235, 235, 235, 0.3);
-   background-color: #caffbf;
+   background-color: #fafafa;
    border-radius: 20px;
  }
  
  #style-7::-webkit-scrollbar
  {
    width: 5px;
-   background-color: #caffbf;
+   background-color: #fafafa;
  }
  
  #style-7::-webkit-scrollbar-thumb
