--- a/Client/src/assets/css/styles_chart.css
+++ b/Client/src/assets/css/styles_chart.css
@@ -311,4 +311,9 @@
 
 .showProject-container .ant-table-pagination.ant-pagination {
   display: none !important;
+} 
+
+.disabled-li {
+    pointer-events:none; 
+    opacity:0.8;         
 }
